Make footer fixed and add padding for white space

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,17 @@
 body {
   background-color: #E8F6EF;
   font-family: "Dosis", sans-serif;
-  color: #185ADB;
+  font-size: clamp(14px, 2vw, 20px);
+  color: #5584AC;
   margin: 0;
 }
 
 h1 {
   font-family: "Carter One", cursive;
+  font-size: clamp(25px, 5vw, 50px);
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 0px;
 }
 
 /*HEADER*/
@@ -27,11 +32,32 @@ h1 {
 .header-img {
   width: 70px;
   height: 70px;
-  margin-left: 10px;
+  padding-left: 50px;
   opacity: 1;
 }
 
 #eda {
-  margin-right: 10px;
+  padding-right: 50px;
   font-size: 20px;
+}
+
+/*MIDDLE SECTION*/
+.middle-section {
+  margin-top: 80px;
+  padding-left: 50px;
+}
+
+/*FOOTER*/
+.footer-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  position: fixed;
+  bottom:0;
+  z-index: 1;
+  width:100%;
+  height:50px;
+  font-size: 12px;
+  padding-left: 50px;
+  background-color: #E8F6EF;
 }
